2007-09-27  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	** Fix for bug #461195

	* util/eab-marshal.list:
	* gui/contact-list-editor/e-contact-list-editor-marshal.list:
	* gui/contact-editor/e-contact-editor-marshal.list: Remove
	needless marshalers.
	* gui/contact-editor/eab-editor.c:
	* gui/widgets/e-minicard-view-widget.c:
	* gui/widgets/eab-marshal.list:
	* gui/widgets/e-minicard.c:
	* gui/widgets/e-minicard-label.c:
	* gui/widgets/e-addressbook-model.c:
	* gui/widgets/e-addressbook-view.c: Use GObject's marshalers.

2007-09-27  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #477045

	* gui/component/addressbook-component.c:
	* gui/component/addressbook-view.c:
	* gui/contact-editor/e-contact-editor-address.c:
	* gui/contact-editor/e-contact-editor-fullname.c:
	* gui/contact-editor/e-contact-editor-im.c:
	* gui/widgets/e-addressbook-view.c:
	* gui/widgets/eab-contact-display.c:
	Use standard icon names where applicable.

2007-09-21  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #411125

	* gui/widgets/e-addressbook-view.etspec:
	* gui/contact-list-editor/e-contact-list-editor.etspec:
	Uses 'compare="collate"' instead of 'compare="string"' to handle UTF
	characters correctly.

2007-09-14  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #476231

	* gui/widgets/eab-gui-util.c:
	Remove non-USE_GTKFILECHOOSER code.
	GtkFileChooser has been around since 2004.

2007-09-07  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #473903

	* gui/merging/eab-contact-merging.c: (mergeit):
	Fixes serious compiler warning.

2007-09-03  Srinivasa Ragavan  <sragavan@novell.com>

	* gui/component/addressbook-config.c: (source_to_uri_parts): Fix for a
	build break.

2007-09-03  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #471791 (Move away from assert to g_ret)

	* gui/component/addressbook-config.c: (ldap_unparse_auth),
	(ldap_unparse_scope), (ldap_unparse_ssl), (source_to_uri_parts):
	* gui/component/addressbook-view.c: (control_activate_cb):