@@ -1,3 +1,11 @@
+2007-09-27  Matthew Barnes  <mbarnes@redhat.com>
+
+	** Fixes part of bug #477045
+
+	* em-format-html.c (efh_format_headers):
+	* em-migrate.c (upgrade_passwords_1_2):
+	Use GLib's Base64 API instead of Camel's.
+
 2007-09-27  Hiroyuki Ikezoe  <poincare@ikezoe.net>
 
 	** Fix for bug #461195
