@@ -1,3 +1,10 @@
+2007-09-27  Matthew Barnes  <mbarnes@redhat.com>
+
+	** Fixes part of bug #474000
+
+	* importers/evolution-ldif-importer.c:
+	Remove redundant Base64 codec implementation.  Use GLib's.
+
 2007-09-27  Hiroyuki Ikezoe  <poincare@ikezoe.net>
 
 	** Fix for bug #461195
